fix: preserve origin order in BookingController and add null guard in UserRole
- BookingController: use LinkedHashSet to preserve configured order for fallback selection
- UserRole: validate null argument in fromValue() with explicit error message